--- a/index.html
+++ b/index.html
@@ -50,69 +50,104 @@
       function formatIpRange(cidr) { try { return cidr?`${parseCidr(cidr).first} - ${parseCidr(cidr).last}`:''; } catch{ return ''; } }
       function countIps(cidr) { return cidr?Math.pow(2,32-parseInt(cidr.split('/')[1],10)):''; }
 
-      // Initial data and decode hash
-      const initialData = [{ name: "Enter a name", region: "Enter a region", location: "Enter a location", cidr: "10.0.0.0/8", vlan: 1, status: "Proposed", description: "Enter a description", tags: "Enter tags", ip_range: formatIpRange("10.0.0.0/8"), num_ips: countIps("10.0.0.0/8") }];
-      function decodeHash() { if(location.hash.startsWith('#data=')){ try{ return JSON.parse(atob(location.hash.slice(6))); }catch{} } return initialData; }
+      // Decode initial state
+      const defaultData = [{ name:"Enter a name", region:"Enter a region", location:"Enter a location", cidr:"10.0.0.0/8", vlan:1, status:"Proposed", description:"Enter a description", tags:"Enter tags", ip_range:formatIpRange("10.0.0.0/8"), num_ips:countIps("10.0.0.0/8") }];
+      function decodeState() {
+        if(location.hash.startsWith('#data=')){
+          try { return JSON.parse(atob(location.hash.slice(6))); } catch {} 
+        }
+        return { data: defaultData, cols: null };
+      }
+      const state = decodeState();
 
-      // Create Tabulator
+      // Initialize Tabulator
       const table = new Tabulator("#network-table", {
-        data: decodeHash(), layout: "fitColumns", reactiveData: true, addRowPos: "bottom", virtualDom:false,
+        data: state.data,
+        layout: "fitColumns",
+        reactiveData: true,
+        addRowPos: "bottom",
+        virtualDom: false,
         columns: [
-          { title:"Name", field:"name", editor:"input", headerFilter:"input", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}] },
-          { title:"Region/Site", field:"region", editor:"input", headerFilter:"input", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}] },
-          { title:"Location", field:"location", editor:"input", headerFilter:"input", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}] },
-          { title:"CIDR Range", field:"cidr", editor:"input", validator:["required",{type:"regex",regex:/^(?:\d{1,3}\.){3}\d{1,3}\/([0-9]|[12][0-9]|3[0-2])$/}], headerFilter:"input", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}] },
-          { title:"VLAN ID", field:"vlan", editor:"number", headerFilter:"number", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}] },
-          { title:"Status", field:"status", editor:"list", editorParams:{values:{"In use":"In use","Deprecated":"Deprecated","Legacy":"Legacy","Decommissioned":"Decommissioned","Proposed":"Proposed","Future State":"Future State"}}, headerFilter:"select", headerFilterParams:{values:{"":"(all)","In use":"In use","Deprecated":"Deprecated","Legacy":"Legacy","Decommissioned":"Decommissioned","Proposed":"Proposed","Future State":"Future State"}}, headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}] },
-          { title:"Description", field:"description", editor:"textarea", headerFilter:"input", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}] },
-          { title:"Tags", field:"tags", formatter:"list", formatterParams:{delimiter:","}, editor:"input", headerFilter:"input", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}] },
-          { title:"IP Range", field:"ip_range", hozAlign:"center", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}] },
-          { title:"# IPs", field:"num_ips", hozAlign:"center", sorter:"number", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}] },
-          { title:"Actions", field:"actions", formatter:"buttonCross", width:50, hozAlign:"center", headerSort:false, headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}], cellClick:(e,cell)=>cell.getRow().delete() }
+          {title:"Name", field:"name", editor:"input", headerFilter:"input", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
+          {title:"Region/Site", field:"region", editor:"input", headerFilter:"input", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
+          {title:"Location", field:"location", editor:"input", headerFilter:"input", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
+          {title:"CIDR Range", field:"cidr", editor:"input", validator:["required",{type:"regex",regex:/^(?:\d{1,3}\.){3}\d{1,3}\/(?:[0-9]|[12][0-9]|3[0-2])$/}], headerFilter:"input", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
+          {title:"VLAN ID", field:"vlan", editor:"number", headerFilter:"number", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
+          {title:"Status", field:"status", editor:"list", editorParams:{values:{"In use":"In use","Deprecated":"Deprecated","Legacy":"Legacy","Decommissioned":"Decommissioned","Proposed":"Proposed","Future State":"Future State"}}, headerFilter:"select", headerFilterParams:{values:{"":"(all)","In use":"In use","Deprecated":"Deprecated","Legacy":"Legacy","Decommissioned":"Decommissioned","Proposed":"Proposed","Future State":"Future State"}}, headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
+          {title:"Description", field:"description", editor:"textarea", headerFilter:"input", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
+          {title:"Tags", field:"tags", formatter:"list", formatterParams:{delimiter:","}, editor:"input", headerFilter:"input", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
+          {title:"IP Range", field:"ip_range", hozAlign:"center", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
+          {title:"# IPs", field:"num_ips", hozAlign:"center", sorter:"number", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
+          {title:"Actions", field:"actions", formatter:"buttonCross", width:50, hozAlign:"center", headerSort:false, headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}], cellClick:(e,cell)=>cell.getRow().delete()}
         ]
       });
 
-      // Auto-update computed columns
+      // Restore column visibility & widths after build
+      table.on("tableBuilt", () => {
+        if(state.cols){
+          const allCols = table.getColumns(true);
+          state.cols.forEach(colState => {
+            const col = allCols.find(c => c.getField() === colState.field);
+            if(col){
+              colState.visible ? col.show() : col.hide();
+              if(colState.width) col.setWidth(colState.width);
+            }
+          });
+        }
+      });
+
+      // Recompute on CIDR edits
       table.on("cellEdited", cell => {
-        if(cell.getField()==="cidr"){
+        if(cell.getField() === "cidr"){
           cell.getRow().update({ ip_range: formatIpRange(cell.getValue()), num_ips: countIps(cell.getValue()) });
         }
       });
 
-      // Controls
-      document.getElementById("add-network").addEventListener("click", ()=>{
+      // Control handlers
+      document.getElementById("add-network").addEventListener("click", () => {
         table.addRow({ name:"", region:"", location:"", cidr:"", vlan:null, status:"Proposed", description:"", tags:"", ip_range:"", num_ips:"" });
       });
 
-      document.getElementById("load-json").addEventListener("click", ()=>{
-        const input = document.getElementById("file-input"); input.accept=".json"; input.dataset.format="json"; input.click();
+      document.getElementById("load-json").addEventListener("click", () => {
+        const input = document.getElementById("file-input"); input.accept = ".json"; input.click();
       });
 
-      document.getElementById("file-input").addEventListener("change", e=>{
+      document.getElementById("file-input").addEventListener("change", e => {
         const file = e.target.files[0]; if(!file) return;
-        const reader = new FileReader(); reader.onload=ev=>{
-          try{ table.replaceData(JSON.parse(ev.target.result)); }catch{ alert("Invalid JSON file"); }
-        }; reader.readAsText(file);
+        const reader = new FileReader();
+        reader.onload = ev => {
+          try { table.replaceData(JSON.parse(ev.target.result)); } catch { alert("Invalid JSON file"); }
+        };
+        reader.readAsText(file);
       });
 
-      // Export/Share dropdown
-      const expBtn = document.getElementById("export-share"), menu = document.querySelector(".dropdown-content");
-      expBtn.addEventListener("click", e=>{ e.stopPropagation(); menu.style.display = menu.style.display==='block'?'none':'block'; });
-      document.addEventListener("click", ()=>menu.style.display='none');
+      // Export/Share dropdown toggling
+      const expBtn = document.getElementById("export-share");
+      const menu = document.querySelector(".dropdown-content");
+      expBtn.addEventListener("click", e => { e.stopPropagation(); menu.style.display = menu.style.display === 'block' ? 'none' : 'block'; });
+      document.addEventListener("click", () => menu.style.display = 'none');
 
-      document.getElementById("download-json").addEventListener("click", ()=>{
-        const blob = new Blob([JSON.stringify(table.getData(),null,2)],{type:"application/json"});
-        const u = URL.createObjectURL(blob), a=document.createElement("a"); a.href=u; a.download="networks.json"; document.body.appendChild(a); a.click(); document.body.removeChild(a); URL.revokeObjectURL(u);
+      // Export JSON
+      document.getElementById("download-json").addEventListener("click", () => {
+        const blob = new Blob([JSON.stringify(table.getData(), null, 2)], { type: "application/json" });
+        const url = URL.createObjectURL(blob);
+        const a = document.createElement("a"); a.href = url; a.download = "networks.json";
+        document.body.appendChild(a); a.click(); document.body.removeChild(a); URL.revokeObjectURL(url);
       });
 
-      document.getElementById("download-csv").addEventListener("click", ()=>table.download("csv","networks.csv"));
+      // Export CSV
+      document.getElementById("download-csv").addEventListener("click", () => table.download("csv", "networks.csv"));
 
-      document.getElementById("share-link").addEventListener("click", ()=>{
-        const url = `${location.origin}${location.pathname}#data=${btoa(JSON.stringify(table.getData()))}`;
-        navigator.clipboard.writeText(url).then(()=>alert("Share link copied to clipboard!"));
+      // Share link with state
+      document.getElementById("share-link").addEventListener("click", () => {
+        const cols = table.getColumns().map(col => ({ field: col.getField(), visible: col.isVisible(), width: col.getWidth() }));
+        const stateObj = { data: table.getData(), cols };
+        const url = `${location.origin}${location.pathname}#data=${btoa(JSON.stringify(stateObj))}`;
+        navigator.clipboard.writeText(url).then(() => alert("Share link copied to clipboard!"));
       });
 
-      document.getElementById("show-columns").addEventListener("click", ()=>table.getColumns().forEach(c=>c.show()));
+      // Show all columns
+      document.getElementById("show-columns").addEventListener("click", () => table.getColumns().forEach(col => col.show()));
     });
   </script>
 </body>
