--- a/index.html
+++ b/index.html
@@ -52,18 +52,19 @@
       function countIps(cidr) { return cidr?Math.pow(2,32-parseInt(cidr.split('/')[1],10)):''; }
 
       // Decode initial state
+      const defaultCIDR="10.0.0.0/8";
       const defaultData = [{
         name:"Enter a name",
         region:"Enter a region",
         location:"Enter a location",
-        cidr:"10.0.0.0/8",
+        cidr:defaultCIDR,
         vlan:1,
         status:"Proposed",
-        dns_domain:"example.local", // NEW FIELD in data model (placed after status)
+        dns_domain:"example.local",
         description:"Enter a description",
         tags:"Enter tags",
-        ip_range:formatIpRange("10.0.0.0/8"),
-        num_ips:countIps("10.0.0.0/8")
+        ip_range:formatIpRange(defaultCIDR),
+        num_ips:countIps(defaultCIDR)
       }];
       function decodeState() {
         if(location.hash.startsWith('#data=')){
@@ -102,7 +103,6 @@
           {title:"CIDR Range", field:"cidr", editor:"input", validator:["required",{type:"regex",regex:/^(?:\d{1,3}\.){3}\d{1,3}\/(?:[0-9]|[12][0-9]|3[0-2])$/}], headerFilter:"input", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
           {title:"VLAN ID", field:"vlan", editor:"number", headerFilter:"number", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
           {title:"Status", field:"status", editor:"list", editorParams:{values:{"In use":"In use","Deprecated":"Deprecated","Legacy":"Legacy","Decommissioned":"Decommissioned","Proposed":"Proposed","Future State":"Future State"}}, headerFilter:"select", headerFilterParams:{values:{"":"(all)","In use":"In use","Deprecated":"Deprecated","Legacy":"Legacy","Decommissioned":"Decommissioned","Proposed":"Proposed","Future State":"Future State"}}, headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
-          // NEW COLUMN (after Status, before Description)
           {title:"DNS Domain", field:"dns_domain", editor:"input", headerFilter:"input", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
           {title:"Description", field:"description", editor:"textarea", headerFilter:"input", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
           {title:"Tags", field:"tags", formatter:"list", formatterParams:{delimiter:","}, editor:"input", headerFilter:"input", headerMenu:[{label:"Hide Column", action:(e,col)=>col.hide()}]},
@@ -156,8 +156,13 @@
       document.getElementById("download-json").addEventListener("click", () => {
         const blob = new Blob([JSON.stringify(table.getData(), null, 2)], { type: "application/json" });
         const url = URL.createObjectURL(blob);
-        const a = document.createElement("a"); a.href = url; a.download = "networks.json";
-        document.body.appendChild(a); a.click(); document.body.removeChild(a); URL.revokeObjectURL(url);
+        const a = document.createElement("a");
+        a.href = url;
+        a.download = "networks.json";
+        document.body.appendChild(a);
+        a.click();
+        document.body.removeChild(a);
+        URL.revokeObjectURL(url);
       });
       document.getElementById("download-csv").addEventListener("click", () => table.download("csv", "networks.csv"));
       document.getElementById("share-link").addEventListener("click", () => {
